--- a/kanban_assets/kanban_css/contacts.css
+++ b/kanban_assets/kanban_css/contacts.css
@@ -86,6 +86,7 @@
 }
 
 .add-person-btn-mobile {
+    width: 132px;
     display: none;
     justify-content: center;
     align-items: center;
@@ -154,12 +155,14 @@
     }
     .main-field {
         flex-direction: column;
-        align-items: flex-end;
+        /* align-items: flex-end; */
+        /* justify-content: space-between; */
     }
     .add-person-btn-mobile {
+        align-self: flex-end;
         cursor: pointer;
         display: flex;
-        margin-right: 0;
+        margin-right: 20px;
     }
 }
 
