--- a/kanban_assets/kanban_css/contacts_small.css
+++ b/kanban_assets/kanban_css/contacts_small.css
@@ -23,6 +23,8 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    border-top-left-radius: 18px;
+    border-top-right-radius: 18px;
 }
 
 .upper-part-small-contacts {
