--- a/login_assets/login_css/forgotPassword.css
+++ b/login_assets/login_css/forgotPassword.css
@@ -3,6 +3,7 @@ body {
 }
 
 .forgotPassword {
+    position: relative;
     height: 300px;
     width: 500px;
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
@@ -11,13 +12,6 @@ body {
     display: flex;
 }
 
-#form-arrow-container-forgot {
-    width: 10%;
-    height: 58px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-}
 
 .logo>img {
     height: 100px;
@@ -57,14 +51,31 @@ body {
     .forgotPassword {
         max-width: 80% !important;
     }
-    .headline {
-        font-size: 18px;
+    .form-headline {
+        font-size: 24px;
     }
-    .send-me-btn {
-        padding: 5px 10px;
+    .form-btn {
+        padding: 10px 10px;
     }
-    .arrow {
-        margin-right: 0;
-        margin-left: -5px;
+    
+}
+
+@media (max-width: 450px) {
+    .form-headline {
+        font-size: 20px;
     }
+    .forgotPassword-text {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 400px) {
+    .form-headline {
+        font-size: 16px
+    }
+    .position-arrow {
+        left: 20px;
+        top: 25px;
+    }
+    
 }
