--- a/login_assets/login_css/login.css
+++ b/login_assets/login_css/login.css
@@ -1,3 +1,56 @@
+.main-login-icon {
+    animation: moveToTopLeftCorner 500ms ease-in-out;
+}
+
+@keyframes moveToTopLeftCorner {
+    0% {
+        position: absolute;
+        top: 300px;
+        left: 500px;
+    }
+
+    100% {
+        position: absolute;
+        top: 50px;
+        left: 50px;
+    }
+}
+
+/* .opening-animation-icon {
+    height: 100px;
+    width: 100px;
+    animation: MoveSlightlyTopLeftCorner 500ms ease-in-out
+}
+
+.opening-animation-layout {
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #4589FF;
+    animation: disappearBackground 5000ms ease-in-out
+} */
+
+/* 
+@keyframes disappearBackground {
+    0% {
+        z-index: -1;
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+@keyframes MoveSlightlyTopLeftCorner {
+    0% {
+        position: absolute;
+        top: 150px;
+        left: 350px;
+    }
+} */
+
 body {
     margin: 0;
     display: flex;
