--- a/kanban_assets/kanban_css/contacts_small.css
+++ b/kanban_assets/kanban_css/contacts_small.css
@@ -19,7 +19,7 @@
 }
 
 #small-contacts-container-close-btn-container {
-    height: 45px;
+    height: 7vh;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -27,7 +27,7 @@
 }
 
 .upper-part-small-contacts {
-    height: 190px;
+    height: 33vh;
     z-index: 2;
     display: flex;
     justify-content: center;
@@ -46,7 +46,7 @@
 }
 
 .lower-part-small-contacts {
-    height: 365px;
+    height: 60vh;
     display: flex;
     justify-content: center;
     align-items: center;
