check user for sign up

--- a/login_assets/login_css/signUp.css
+++ b/login_assets/login_css/signUp.css
@@ -31,6 +31,14 @@ body {
     margin-right: 50px;
 }
 
+.email-exist {
+    color: red;
+}
+
+.d-none {
+    display: none;
+}
+
 @media(max-width:540px) {
     .signUp {
         max-width: 80% !important;
