--- a/kanban_assets/kanban_css/help.css
+++ b/kanban_assets/kanban_css/help.css
@@ -14,13 +14,24 @@
     color: #4589FF;
 }
 
-#subtitle-join {
+.subtitles {
     color: #005DFF;
 }
 
-#subtitle-how-to {
-    color: #005DFF;
-}
+.kanban-main::-webkit-scrollbar { 
+    width: 10px;
+    height: 4px;  
+  }
+  
+  .kanban-main::-webkit-scrollbar-track {
+    background: transparent;   /* color of the tracking area */ 
+    margin-bottom: 350px;    
+  }
+  
+  .kanban-main::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3);    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */ 
+  }
 
 @media (max-width: 500px) {
     .main-field {
