--- a/login_assets/login_css/resetPassword.css
+++ b/login_assets/login_css/resetPassword.css
@@ -3,6 +3,7 @@ body {
 }
 
 .resetPassword {
+    position: relative;
     height: 300px;
     width: 500px;
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
