--- a/kanban_assets/kanban_css/generalKanban.css
+++ b/kanban_assets/kanban_css/generalKanban.css
@@ -230,7 +230,7 @@
 }
 
 .logout {
-    width: 70px;
+    width: 56px;
     background-color: white;
     cursor: pointer;
     z-index: 2;
@@ -238,7 +238,7 @@
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     border-radius: 8px;
     position: absolute;
-    bottom: -70px;
+    top: 10vh;
     right: -25px;
 }
 
@@ -255,7 +255,7 @@
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     border-radius: 8px;
     position: absolute;
-    bottom: -70px;
+    top: 8vh;
     right: -25px;
 }
 
