--- a/kanban_assets/kanban_css/legal-notice.css
+++ b/kanban_assets/kanban_css/legal-notice.css
@@ -22,6 +22,19 @@
     color: #005DFF;
 }
 
+.main-field {
+    overflow-y: auto;
+    width: 60vw;
+    margin: auto;
+    padding-bottom:  20px;
+}
+
+.main-field > h1 {
+    color: #005DFF;
+}
+.main-field > h2 {
+    color: #005DFF;
+}
 
 .kanban-main::-webkit-scrollbar { 
     width: 10px;
