--- a/kanban_assets/kanban_css/legal-notice.css
+++ b/kanban_assets/kanban_css/legal-notice.css
@@ -23,8 +23,8 @@
 }
 
 .main-field {
+    box-sizing: border-box;
     overflow-y: auto;
-    width: 60vw;
     margin: auto;
     padding-bottom:  20px;
 }
@@ -36,17 +36,17 @@
     color: #005DFF;
 }
 
-.kanban-main::-webkit-scrollbar { 
+.main-field::-webkit-scrollbar { 
     width: 10px;
     height: 4px;  
   }
   
-  .kanban-main::-webkit-scrollbar-track {
+  .main-field::-webkit-scrollbar-track {
     background: transparent;   /* color of the tracking area */ 
     margin-bottom: 350px;    
   }
   
-  .kanban-main::-webkit-scrollbar-thumb {
+  .main-field::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 0.3);    /* color of the scroll thumb */
     border-radius: 20px;       /* roundness of the scroll thumb */ 
   }
