--- a/kanban_assets/kanban_css/contacts_small.css
+++ b/kanban_assets/kanban_css/contacts_small.css
@@ -1,6 +1,6 @@
 #small-contacts-container {
     height: 100vh;
-    width: 35vw;
+    width: 350px;
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
     border-radius: 8px;
     position: absolute;
