--- a/kanban_assets/kanban_css/board.css
+++ b/kanban_assets/kanban_css/board.css
@@ -73,11 +73,18 @@
 }
 
 .added-task {
+    box-sizing: border-box;
+    overflow-wrap: break-word;
     cursor: pointer;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     padding: 10px;
     border-radius: 16px;
     margin: 10px;
+}
+
+.added-text {
+    margin: 5px 0;
+    
 }
 
 .task-headline {
