--- a/login_assets/login_css/generalForm.css
+++ b/login_assets/login_css/generalForm.css
@@ -1,3 +1,8 @@
+#msgBox {
+    
+    margin-bottom: 20px;
+}
+
 .d-none {
     display: none;
 }
@@ -84,6 +89,7 @@
 .overlay-container {
     height: 80vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
