--- a/kanban_assets/kanban_css/help.css
+++ b/kanban_assets/kanban_css/help.css
@@ -1,6 +1,7 @@
 .help-container {
-    width: 90%;
-    margin: 20px auto;
+    box-sizing: border-box;
+    width: 80%;
+    margin: auto;
 }
 
 .help-arrow-container {
