--- a/kanban_assets/kanban_css/task.css
+++ b/kanban_assets/kanban_css/task.css
@@ -49,7 +49,7 @@
 }
 
 #due-date {
-    width: 95%;
+    /* width: 95%; */
     margin-top: 10px;
     padding-bottom: 10px;
 }
@@ -192,6 +192,7 @@
 
 
 .priority-btn-container a {
+    box-shadow: 0px 0px 4px rgb(0 0 0 / 16%);
     background-color: transparent;
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 8px;
@@ -254,15 +255,13 @@
 }
 
 #add-contact-input {
+    width: 93.32%;;
     padding-bottom: 10px;
 }
 
 #add-category-input {
+    width: 93.32%;
     padding-bottom: 10px;
-}
-
-.add-option-input {
-    width: 95%;
 }
 
 .add-option-input:focus {
@@ -329,14 +328,8 @@
     .task-form {
         width: 250px;
     }
-    .input-title {
-        width: 235px;
-    }
     #contacts {
         width: 250px;
-    }
-    #due-date {
-        width: 235px;
     }
     #task-category {
         width: 250px;
@@ -345,7 +338,7 @@
         width: 250px;
     }
     #subtask-category {
-        width: 235px
+        width: 250px
     }
     .create-task-container {
         width: 100%;
@@ -372,13 +365,13 @@
         width: 100%;
     }
     .input-title {
-        width: 95%;
+        /* width: 95%; */
     }
     #contacts {
         width: 100%;
     }
     #due-date {
-        width: 95%;
+        /* width: 95%; */
     }
     #task-category {
         width: 100%;
@@ -387,7 +380,7 @@
         width: 100%;
     }
     #subtask-category {
-        width: 95%
+        /* width: 95% */
     }
     .create-task-container {
         width: 100%;
