--- a/kanban_assets/kanban_css/legal-notice.css
+++ b/kanban_assets/kanban_css/legal-notice.css
@@ -51,6 +51,12 @@
     border-radius: 20px;       /* roundness of the scroll thumb */ 
   }
 
+@media (max-width: 600px) {
+    .kanban-main {
+        height: 75vh;
+    } 
+}
+
 @media (max-width: 500px) {
     .main-field {
         height: 105%;
@@ -59,6 +65,7 @@
         width: 100%;
     }
     .kanban-btns {
+        background-color: white;
         position: absolute;
         bottom: 0;
     }
