--- a/kanban_assets/kanban_css/task.css
+++ b/kanban_assets/kanban_css/task.css
@@ -143,13 +143,14 @@
 }
 
 #textarea {
-    width: 90%;
+    width: 95%;
     height: 75px;
     margin: auto;
     border-radius: 8px;
     padding-left: 15px;
     padding-top: 10px;
-
+    resize: none;
+    outline: none;
 }
 
 .category-container {
@@ -268,6 +269,9 @@
     outline: none;
 }
 
+.add-option-subtask{
+    border-bottom: 1px solid gray;
+}
 .add-option-input::placeholder {
     color: rgba(0, 0, 0, 0.2);
 }
@@ -281,6 +285,7 @@
 #add-subtask-input {
     margin-top: 10px;
     padding-bottom: 10px;
+    border: none;
 }
 
 .add-option-btn-container-subtask {
