user icons all round , scrollbars deleted

--- a/kanban_assets/kanban_css/generalKanban.css
+++ b/kanban_assets/kanban_css/generalKanban.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Open Sans';
+}
+
 .d-none {
     display: none;
 }
@@ -325,8 +329,8 @@
     justify-content: center;
     align-items: center;
     width: 45px;
-    height: 38px;
-    letter-spacing: 2px;
+    height: 45px;
+    /*letter-spacing: 2px;*/
     color: white;
     border-radius: 50%;
 }
@@ -346,7 +350,7 @@
 .user-icon-edit-contact {
     color: white;
     padding: 20px 25px;
-    border-radius: 50%;
+    border-radius: 100%;
     margin-bottom: 20px;
 }
 
